--- a/src/app/components/customer-creation/customer-creation.component.html
+++ b/src/app/components/customer-creation/customer-creation.component.html
@@ -1,10 +1,12 @@
-<form>
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <h3 class="first">Create new customer</h3>
+    <label class="required-field">Customer ID</label>
+    <input type="text" class="form-control" formControlName="customerId">
     <label class="required-field">Customer name</label>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" formControlName="customerName">
     <div>
-      <button type="button" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
 </form>
