Bug fix - Customer form values submission

--- a/src/app/components/customer-creation/customer-creation.component.html
+++ b/src/app/components/customer-creation/customer-creation.component.html
@@ -1,12 +1,17 @@
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+
   <div class="form-group">
+
     <h3 class="first">Create new customer</h3>
     <label class="required-field">Customer ID</label>
-    <input type="text" class="form-control" formControlName="customerId">
+    <input type="text" class="form-control" formControlName="id">
+
     <label class="required-field">Customer name</label>
-    <input type="text" class="form-control" formControlName="customerName">
+    <input type="text" class="form-control" formControlName="name">
+
     <div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
+
   </div>
 </form>
