--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-add-shipment></app-add-shipment>
 <app-customer-creation></app-customer-creation>
+<app-show-customer-list></app-show-customer-list>
 <router-outlet></router-outlet>
