Reorganizing components and adding routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-add-shipment></app-add-shipment>
-<app-customer-creation></app-customer-creation>
-<app-show-customer-list></app-show-customer-list>
+<div><a routerLink="/app/customer">Customer</a></div>
+<div><a routerLink="/app/shipment">Shipment</a></div>
+
 <router-outlet></router-outlet>
