refactored customer component to use "simple" view components and upper-level component responsible for the interaction with services and "simple components"

--- a/src/app/components/customer-layout/customer-edit/customer-edit.component.html
+++ b/src/app/components/customer-layout/customer-edit/customer-edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
 
   <div class="form-group">
 
