--- a/src/app/components/customer-layout/customer/customer.component.html
+++ b/src/app/components/customer-layout/customer/customer.component.html
@@ -1,4 +1,4 @@
 <p>customer works!</p>
 
-<app-customer-creation></app-customer-creation>
-<app-show-customer-list></app-show-customer-list>
+<app-customer-edit [customer]="currentCustomer" (customerChanged)="onCustomerChanged($event)"></app-customer-edit>
+<app-customer-list [customers]="customers | async"></app-customer-list>
