--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div><a routerLink="/app/customer">Customer</a></div>
-<div><a routerLink="/app/shipment">Shipment</a></div>
-
-<router-outlet></router-outlet>
+<div class="container">
+  <div><a routerLink="/app/customer">Customer</a></div>
+  <div><a routerLink="/app/shipment">Shipment</a></div>
+  <router-outlet></router-outlet>
+</div>
