--- a/src/app/components/shipment-layout/shipment/shipment.component.html
+++ b/src/app/components/shipment-layout/shipment/shipment.component.html
@@ -1,3 +1,5 @@
-<p>shipment works!</p>
 
 <app-add-shipment></app-add-shipment>
+<app-show-shipment-list [id]="currentId" (customerIdChanged)="onCustomerIdChanged($event)"></app-show-shipment-list>
+<app-shipment-list [shipments]="shipments | async"></app-shipment-list>
+
