add functionality of creating new shipment for the selected customer and saving it to BE

--- a/src/app/components/shipment-layout/add-shipment/add-shipment.component.scss
+++ b/src/app/components/shipment-layout/add-shipment/add-shipment.component.scss
@@ -1,7 +1,8 @@
-div {
-  padding: 10px;
+div.form-group {
+  margin-bottom: 30px;
 }
 
-input.ng-touched.ng-invalid {
-  border-color: red;
+.btn-primary {
+  margin-top: 20px;
 }
+
