--- a/src/app/components/shipment-layout/add-shipment/add-shipment.component.html
+++ b/src/app/components/shipment-layout/add-shipment/add-shipment.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="myReactiveForm" (submit)="onSubmit()">
+<form [formGroup]="myReactiveForm" (ngSubmit)="onSubmit()">
   <h2>Add Shipment</h2>
 
   <div class="form-group">
@@ -10,6 +10,7 @@
     <input type="number" pInputText placeholder="Customer id" formControlName="customerId" class="form-control">
     <app-validation-errors [control]="myReactiveForm.get('customerId')"></app-validation-errors>
   </div>
+
 
   <button type="submit" class="btn btn-info">Submit new shipment</button>
 </form>
