--- a/src/app/components/shipment-layout/show-shipment-list/show-shipment-list.component.html
+++ b/src/app/components/shipment-layout/show-shipment-list/show-shipment-list.component.html
@@ -1,8 +1,7 @@
 <form [formGroup]="shipmentForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <h3 class="first">Show Customer shipments</h3>
-    <label class="required-field">Customer ID</label>
-    <input type="number" class="form-control" formControlName="id">
+    <input type="number" pInputText placeholder="Customer ID" class="form-control" formControlName="id">
     <app-validation-errors [control]="shipmentForm.get('id')"></app-validation-errors>
     <div>
       <button type="submit" class="btn btn-primary">Submit</button>
