--- a/src/app/components/customer-layout/customer-list/customer-list.component.html
+++ b/src/app/components/customer-layout/customer-list/customer-list.component.html
@@ -1,6 +1,6 @@
 <h2>List of Customers</h2>
 <ul class="customers">
-  <li *ngFor="let customer of customers">
+  <li *ngFor="let customer of customers" (click)="onClick(customer)">
     <span>{{customer.id}}</span> {{customer.name}}
   </li>
 </ul>
