New customer shipments layout #25.
Create new customer shipments layout accessible via following route:
/app/customer/{customerId}/shipments. Layout should show all shipments of the customer with customerId from the route

--- a/src/app/components/customer-layout/customer-list/customer-list.component.html
+++ b/src/app/components/customer-layout/customer-list/customer-list.component.html
@@ -2,5 +2,6 @@
 <ul class="customers">
   <li *ngFor="let customer of customers" (click)="onClick(customer)">
     <span>{{customer.id}}</span> {{customer.name}}
+    <a [routerLink]="[customer.id,'shipments' ]">Go to Shipment List</a>
   </li>
 </ul>
