CustomerList Page Modification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-  <div><a routerLink="/app/customer">Customer</a></div>
-  <div><a routerLink="/app/shipment">Shipment</a></div>
-  <router-outlet></router-outlet>
-</div>
+<div class="router"><a routerLink="/app/customer">Customer</a></div>
+<div class="router"><a routerLink="/app/shipment">Shipment</a></div>
+<router-outlet></router-outlet>
