--- a/src/app/components/customer-layout/customer-list/customer-list.component.scss
+++ b/src/app/components/customer-layout/customer-list/customer-list.component.scss
@@ -1,3 +1,10 @@
-
-
+ul {
+  list-style-type: none;
+  margin-bottom: 10px;
+  padding: 0;
+}
+.btn-sm {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
 
