--- a/src/app/components/customer-layout/customer-edit/customer-edit.component.html
+++ b/src/app/components/customer-layout/customer-edit/customer-edit.component.html
@@ -2,7 +2,7 @@
 
   <div class="form-group">
 
-    <h3 class="first">Create new customer</h3>
+    <h4>Create new customer</h4>
     <label class="required-field">Customer ID</label>
     <input type="text" class="form-control" formControlName="id">
 
