--- a/src/app/components/customer-layout/customer/customer.component.html
+++ b/src/app/components/customer-layout/customer/customer.component.html
@@ -1,5 +1,4 @@
-<p>customer works!</p>
-
-<app-customer-edit [customer]="currentCustomer" (customerChanged)="onCustomerChanged($event)"></app-customer-edit>
-<app-customer-list [customers]="customers | async" (customerUpdated)="onCustomerUpdated($event)"></app-customer-list>
-
+<div class="container">
+  <app-customer-edit [customer]="currentCustomer" (customerChanged)="onCustomerChanged($event)"></app-customer-edit>
+  <app-customer-list [customers]="customers | async" (customerUpdated)="onCustomerUpdated($event)"></app-customer-list>
+</div>
