New layout - show tracking events by shipmentId 1. Field to input shipmentId, when click on button or pressing "enter" show all tracking events

--- a/src/app/components/shipment-layout/shipment/shipment.component.html
+++ b/src/app/components/shipment-layout/shipment/shipment.component.html
@@ -3,4 +3,5 @@
 <app-shipment-selector-component (customerIdChanged)="onCustomerIdChanged($event)"></app-shipment-selector-component>
 <div *ngIf="customerError">{{customerError}}</div>
 <app-shipment-list [shipments]="shipments"></app-shipment-list>
-
+<app-shipment-by-tracking (shipmentIdChanged)="onShipmentIdChanged($event)"></app-shipment-by-tracking>
+<app-shipment-tracking-list [trackings]="trackings"></app-shipment-tracking-list>
