--- a/src/app/components/shipment-layout/shipment-by-tracking/shipment-by-tracking.component.html
+++ b/src/app/components/shipment-layout/shipment-by-tracking/shipment-by-tracking.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="shipmentTrackingForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <h3 class="first">Show Trackings by shipment id</h3>
-    <input type="number" pInputText placeholder="Tracking ID" class="form-control" formControlName="shipmentId">
+    <input type="number" pInputText placeholder="Shipment ID" class="form-control" formControlName="shipmentId">
     <app-validation-errors [control]="shipmentTrackingForm.get('shipmentId')"></app-validation-errors>
     <div>
       <button type="submit" class="btn btn-primary">Submit</button>
