--- a/src/app/components/shipment-layout/shipment-list/shipment-list.component.scss
+++ b/src/app/components/shipment-layout/shipment-list/shipment-list.component.scss
@@ -7,5 +7,5 @@ input.ng-touched.ng-invalid {
 
 .btn {
   color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;}
+  background-color: aliceblue;
+  border-color: aliceblue}
