Customer info page and its functionality

--- a/src/app/components/customer-info-layout/customer-info/customer-info.component.html
+++ b/src/app/components/customer-info-layout/customer-info/customer-info.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <button type="button" class="btn btn-primary btn-sm" (click)="toggleCustomerEditForm()">Edit customer</button>
-  <app-customer-edit *ngIf="show" (customerUpdated)="onCustomerUpdated($event)"></app-customer-edit>
+  <app-customer-edit *ngIf="showCustomerEditForm" [customer]="this.currentCustomer" (customerUpdated)="onCustomerUpdated($event)"></app-customer-edit>
+  <div *ngIf="showCustomerEdited" class="message">Customer was successfully edited</div>
 
   <app-customer-shipments></app-customer-shipments>
 
