--- a/src/app/components/customer-info-layout/customer-edit/customer-edit.component.html
+++ b/src/app/components/customer-info-layout/customer-edit/customer-edit.component.html
@@ -1,11 +1,9 @@
-<div *ngIf="visible">
 <form [formGroup]="customerEditForm" (ngSubmit)="onSubmit()">
-
   <div class="form-group">
 
     <h4>Edit customer data</h4>
     <label class="required-field">Customer id</label>
-    <input type="text" class="form-control" formControlName="id">
+    <input type="text" class="form-control" formControlName="id" [readOnly]="_customer">
 
     <label class="required-field">Customer name</label>
     <input type="text" class="form-control" formControlName="name">
@@ -13,8 +11,5 @@
     <div>
       <button type="submit" class="btn btn-primary btn-sm">Submit</button>
     </div>
-
   </div>
 </form>
-</div>
-<div *ngIf="displayed" class="message">Customer was successfully edited</div>
