--- a/src/app/components/customer-info-layout/customer-shipments/customer-shipments.component.html
+++ b/src/app/components/customer-info-layout/customer-shipments/customer-shipments.component.html
@@ -1,4 +1,4 @@
-<h4 *ngIf="shipments">Customer {{customerId}} has the following shipments:</h4>
+<h4 *ngIf="shipments">{{customerName}} has the following shipments:</h4>
   <ul class="shipments">
     <li *ngFor="let shipment of shipments">
       <div class="row">
