--- a/src/app/components/customer-info-layout/customer-shipment-create/customer-shipment-create.component.html
+++ b/src/app/components/customer-info-layout/customer-shipment-create/customer-shipment-create.component.html
@@ -1,14 +1,13 @@
-<div *ngIf="visible">
 <form [formGroup]="shipmentCreateForm" (ngSubmit)="onSubmit()">
 
   <div class="form-group">
 
     <h4>Add new shipment</h4>
+    <label class="required-field">Customer ID</label>
+    <input type="text" class="form-control" formControlName="customerId" [readOnly]="_customer">
+
     <label class="required-field">Shipment description</label>
     <input type="text" class="form-control" formControlName="description">
-
-    <label class="required-field">Customer ID</label>
-    <input type="text" class="form-control" formControlName="customerId">
 
     <div>
       <button type="submit" class="btn btn-primary btn-sm">Submit</button>
@@ -16,5 +15,4 @@
 
   </div>
 </form>
-</div>
-<div *ngIf="displayed">Shipment was successfully added</div>
+
